--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "sharp": "^0.34.5"
+    "next": "15.1.0", 
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "16.0.8"
+    "eslint": "^8",
+    "eslint-config-next": "15.1.0"
   }
 }
