--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.1.0", 
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.1.0"
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10"
   }
 }
